@@ -11,6 +11,7 @@ export(as_image)
 export(autofit)
 export(bg)
 export(body_add_flextable)
+export(body_replace_flextable_at_bkm)
 export(bold)
 export(border)
 export(border_inner_h)
